2003-11-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_PROT_GROWSUPDOWN): Define for 2.6.1 and up.
	* sysdeps/unix/sysv/linux/dl-execstack.c: Omit compatibility code
	if __ASSUME_PROT_GROWSUPDOWN is defined.

2003-11-26  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/dl-execstack.c
	(_dl_make_stack_executable): Set dl_stack_flags always for
	success.

2003-06-22  Petter Reinholdtsen  <pere@hungry.com>

	* locale/program/ld-monetary.c: Only check the first three
	characters in int_curr_symbol against ISO-4217, to make the
	separator character used by a locale independent of the content
	in iso-4217.def.
	* locale/iso-4217.def: Remove the space character from all
	currency values to get the new test code in ld-monetary.c working.

2003-11-21  David Mosberger  <davidm@hpl.hp.com>

	* elf/soinit.c (_fini): Put _fini() in .init_array section if
	HAVE_INITFINI_ARRAY is defined.

2003-11-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h: Introduce __libc_sqrtl symbol.
	Define it appropriately after last change.  Use it where __sqrtl
	was used.

2003-11-25  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/fpu/bits/mathinline.h (sqrt): Don't inline
	sqrt for gcc 3.3 and above.

2003-11-25  Ulrich Drepper  <drepper@redhat.com>

	* posix/runptests.c (main): Make errors fatal.
	* posix/PTESTS: One test in GA135 and GA136 check functionality
	which seems not guaranteed.

2003-11-25  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (re_search_internal): If prune_impossible_nodes
	returned REG_NOMATCH, set match_last to -1.  Don't initialize
	pmatch[0] needlessly.  Fix comment.
	(prune_impossible_nodes): Don't segfault on NULL state_log entry.
	(set_regs): Fix comment.
	* posix/regcomp.c (parse_bracket_exp): Only set has_plural_match
	if adding both SIMPLE_BRACKET and COMPLEX_BRACKET.
	(build_charclass_op): Set has_plural_match if adding both
	SIMPLE_BRACKET and COMPLEX_BRACKET.